--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -8,10 +8,12 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="assets/app.css" rel="stylesheet" />
+    <link href="_content/Leonardo.AspNetCore.Components.Material/bundle.css" rel="stylesheet" />
 </head>
 <body>
     <app>Loading...</app>
 
+    <script src="_content/Leonardo.AspNetCore.Components.Material/bundle.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 </html>
