--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -1,19 +1,27 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Material Components for Blazor WebAssembly</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
-    <link href="assets/app.css" rel="stylesheet" />
-    <link href="_content/Leonardo.AspNetCore.Components.Material/bundle.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="assets/app.css" />
+    <link rel="stylesheet" href="_content/Leonardo.AspNetCore.Components.Material/bundle.css" />
 </head>
+
 <body>
     <app>Loading...</app>
+    <div id="blazor-error-ui">
+        An unhandled error has occurred.
+        <a href="" class="reload">Reload</a>
+        <a class="dismiss">🗙</a>
+    </div>
 
     <script src="_content/Leonardo.AspNetCore.Components.Material/bundle.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
+
 </html>
