demo(checkbox): Initial scaffolding

--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width" />
     <title>Material Components for Blazor WebAssembly</title>
     <base href="/" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" >
+    <link rel="stylesheet" href="_content/Leonardo.AspNetCore.Components.Material/bundle.css" />
+    <link rel="stylesheet" href="assets/app.css" />
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/site.css" />
-    <link rel="stylesheet" href="assets/app.css" />
-    <link rel="stylesheet" href="_content/Leonardo.AspNetCore.Components.Material/bundle.css" />
 </head>
 
-<body>
+<body class="mdc-typography">
     <app>Loading...</app>
     <div id="blazor-error-ui">
         An unhandled error has occurred.
