--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -25,6 +25,8 @@
 
     <script src="_content/Leonardo.AspNetCore.Components.Material/bundle.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <script src="assets/main.js"></script>
 </body>
 
 </html>
