--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Material Components for Blazor WebAssembly</title>
+    <title>Material Components Blazor | Catalog</title>
     <base href="/" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" >
     <link rel="stylesheet" href="_content/Leonardo.AspNetCore.Components.Material/bundle.css" />
