--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Material Components Blazor | Catalog</title>
     <base href="/" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" >
