refactor(textfield): Use TypeScript for JS interop

--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -20,10 +20,13 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="_content/Leonardo.AspNetCore.Components.Material/bundle.js"></script>
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/app.bundle.js" async></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-ripple.bundle.js" async></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-textfield.bundle.js" async></script>
 
     <script src="assets/main.js"></script>
+
+    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
 </html>
