refactor(snackbar): Use TypeScript for JS interop

--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -22,6 +22,7 @@
 
     <script src="_content/Leonardo.AspNetCore.Components.Material/app.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-ripple.bundle.js" async></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-snackbar.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-textfield.bundle.js" async></script>
 
     <script src="assets/main.js"></script>
