refactor(top-app-bar): Use TypeScript for JS interop

--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -24,6 +24,7 @@
     <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-ripple.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-snackbar.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-textfield.bundle.js" async></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-top-app-bar.bundle.js" async></script>
 
     <script src="assets/main.js"></script>
 
