refactor(circular-progress): Use TypeScript for JS interop

--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -21,10 +21,11 @@
     </div>
 
     <script src="_content/Leonardo.AspNetCore.Components.Material/app.bundle.js" async></script>
-    <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-ripple.bundle.js" async></script>
-    <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-snackbar.bundle.js" async></script>
-    <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-textfield.bundle.js" async></script>
-    <script src="_content/Leonardo.AspNetCore.Components.Material/mdc-top-app-bar.bundle.js" async></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/circular-progress.bundle.js" async></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/ripple.bundle.js" async></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/snackbar.bundle.js" async></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/textfield.bundle.js" async></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/top-app-bar.bundle.js" async></script>
 
     <script src="assets/main.js"></script>
 
