refactor(checkbox): Use TypeScript for JS interop

--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -21,6 +21,7 @@
     </div>
 
     <script src="_content/Leonardo.AspNetCore.Components.Material/app.bundle.js" async></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/checkbox.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/circular-progress.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/ripple.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/snackbar.bundle.js" async></script>
