--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -23,6 +23,7 @@
     <script src="_content/Leonardo.AspNetCore.Components.Material/app.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/checkbox.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/circular-progress.bundle.js" async></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/drawer.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/ripple.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/snackbar.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/textfield.bundle.js" async></script>
