refactor(tab-bar): Use TypeScript for JS interop

--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -26,6 +26,7 @@
     <script src="_content/Leonardo.AspNetCore.Components.Material/drawer.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/ripple.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/snackbar.bundle.js" async></script>
+    <script src="_content/Leonardo.AspNetCore.Components.Material/tab-bar.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/textfield.bundle.js" async></script>
     <script src="_content/Leonardo.AspNetCore.Components.Material/top-app-bar.bundle.js" async></script>
 
