--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Material Components Blazor | Catalog</title>
     <base href="/" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" >
+    <link rel="icon" type="image/png" href="/assets/images/favicon-32.png" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="_content/Leonardo.AspNetCore.Components.Material/bundle.css" />
     <link rel="stylesheet" href="assets/app.css" />
 </head>
