--- a/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
+++ b/examples/Blazor.Material.Components.WebApp/wwwroot/index.html
@@ -7,7 +7,9 @@
     <title>Material Components Blazor | Catalog</title>
     <base href="/" />
     <link rel="icon" type="image/png" href="/assets/images/favicon-32.png" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="_content/Leonardo.AspNetCore.Components.Material/bundle.css" />
     <link rel="stylesheet" href="assets/app.css" />
 </head>
